--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.3.1",
     "morgan": "~1.9.1",
-    "nodemon": "^3.0.1"
+    "node-soap": "^1.0.0",
+    "nodemon": "^3.0.1",
+    "soap": "^1.0.0"
   }
 }
