--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "project",
-  "version": "0.0.0",
+  "version": "18.17.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "nodemon ./bin/www"
+    "dev": "nodemon ./bin/www",
+    "lint": "eslint ./bin/www",
+    "lint:fix": "eslint --fix ./bin/www"
+
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
@@ -19,5 +22,12 @@
     "node-soap": "^1.0.0",
     "nodemon": "^3.0.1",
     "soap": "^1.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.48.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.28.1",
+    "eslint-plugin-n": "^16.0.2",
+    "eslint-plugin-promise": "^6.1.1"
   }
 }
